--- a/resume.qmd
+++ b/resume.qmd
@@ -48,6 +48,13 @@ title: "Resume"
 
 2020 (Winter Session), Binkley Family Graduate Scholarship, University of British Columbia, CAD\$ 5100
 
+# Course & Content Development
+
+2024 (Summer Session), Graduate Academic Assistant, CONS 327 Course Development, Faculty of Forestry, University of British Columbia
+
+2023/2024, TA Training Program Coordinator, Teaching & Learning Support, Dean’s Office, Faculty of Forestry, University of British Columbia. 
+
+
 # Teaching Assistantships
 
 FCOR 599, Project Proposal Development and Proof of Concept, Senior Teaching Assistant (2 Terms, Winter session, 2024/25), 6 credits, 39 students.
@@ -71,6 +78,8 @@ FCOR 501, Project Management, Graduate Teaching Assistant (Winter Session, 2021)
 APPP 501, Project Management and Leadership, Graduate Teaching Assistant (Winter Session, 2021), 1.5 credits, 32 students.
 
 # Institutional Service
+
+2024, M.G.E.M., Sept. Retreat, Alumni Guest & Support.
 
 2023, M.G.E.M., Sept. Retreat, Alumni Guest & Support.
 
