--- a/publications.qmd
+++ b/publications.qmd
@@ -4,10 +4,4 @@ title: "Publications"
 
 *Peer-reviewed publications:*
 
-**Melser, R**., Coops, N. C., Wulder, M.A., & Derksen, C. (2023). Multi-Source Remote Sensing Based Modelling of Vegetation Productivity in the Boreal: Issues & Opportunities. *Canadian Journal of Remote Sensing, 49(1).* <https://doi.org/10.1080/07038992.2023.2256895>
-
-**Melser, R**., Coops, N. C., & Derksen, C. (2024). Characterizing satellite-derived freeze/thaw regimes through spatial and temporal clustering for the identification of growing season constraints on vegetation productivity. *Remote Sensing of Environment, 309,* 114210. <https://doi.org/10.1016/j.rse.2024.114210>
-
-*Reports:*
-
-2021, M.G.E.M.: Random Forest predictive mapping project aimed towards identifying wetlands in the Chinchaga Watershed Management Basin, Fort St. John Timber Supply Area, BC.
+Despite listing them on your resume, it may also be pertinent to create a seperate tab for publications and reports. As your career progresses, this list may become quite long, so be sure to organize things. You may want to point to 'most recent' publications, or categorize things by project/topic. 
