--- a/resume.qmd
+++ b/resume.qmd
@@ -4,88 +4,37 @@ title: "Resume"
 
 # Education
 
--   PhD., Forestry, Department of Forest Resources Management, University of British Columbia, 2025
-
--   M.G.E.M., Department of Forest Resources Management, University of British Columbia, 2021
-
--   B.A. Environment & Sustainability, Department of Geography, University of British Columbia, 2019
+-   List your education here. 
 
 # Publications
 
 *Peer-reviewed publications:*
 
-**Melser, R**., Coops, N. C., Wulder, M.A., & Derksen, C. (2023). Multi-Source Remote Sensing Based Modelling of Vegetation Productivity in the Boreal: Issues & Opportunities. *Canadian Journal of Remote Sensing, 49(1).* <https://doi.org/10.1080/07038992.2023.2256895>
-
-**Melser, R**., Coops, N. C., & Derksen, C. (2024). Characterizing satellite-derived freeze/thaw regimes through spatial and temporal clustering for the identification of growing season constraints on vegetation productivity. *Remote Sensing of Environment, 309,* 114210. <https://doi.org/10.1016/j.rse.2024.114210>
+- List any peer-reviewed publications here.
 
 *Reports:*
 
-2021, M.G.E.M.: Random Forest predictive mapping project aimed towards identifying wetlands in the Chinchaga Watershed Management Basin, Fort St. John Timber Supply Area, BC.
+- List any non-peer reviewed materials you'd like to share here.
 
 # Conferences & Talks
 
 *Invited Talks*
 
-**Melser, R**., Coops, N. C., Wulder, M.A., & Derksen, C. (2023). Remote Sensing of Freeze/Thaw Transitions for the Improvement of Remote Sensing-Based GPP Estimates in Boreal Environments. Presentation at the Canadian Space Agency’s SMAP Science Meeting 2023, Montreal, Canada.
+- If you've been invited to speak in a professional setting, list that here. 
 
 *Conference Presentations*
 
-**Melser, R**., Coops, N. C., Wulder, M. A., & Derksen, C. (2022). Remote Sensing Based Modelling of Vegetation Productivity in the Canadian Boreal: Issues & Opportunities. Oral presentation at the European Space Agency’s Living Planet Symposium 2022, Bonn, Germany.
-
-**Melser, R**., Coops, N. C., Wulder, M. A., & Derksen, C. (2024). Constraining estimates of Boreal vegetation productivity in multi-source remote sensing-based models. Oral presentation at the ForestSAT Conference 2024, Rotorua, New Zealand.
+- If the presentation was at a conference, list them here. 
 
 # Awards & Honors
 
-2023 (Winter Session), President’s Academic Excellence Initiative PhD Award, University of British Columbia, CAD \$810
+- List any scholarships, bursaries, etc. 
 
-2023 (Summer Session), President’s Academic Excellence Initiative PhD Award, University of British Columbia, CAD \$405
-
-2022 (Winter Session), President’s Academic Excellence Initiative PhD Award, University of British Columbia, CAD \$940
-
-2022 (Summer Session), President’s Academic Excellence Initiative PhD Award, University of British Columbia, CAD \$470
-
-2021 (Winter Session), President’s Academic Excellence Initiative PhD Award, University of British Columbia, CAD \$450
-
-2020 (Winter Session), Binkley Family Graduate Scholarship, University of British Columbia, CAD\$ 5100
-
-# Course & Content Development
-
-2024 (Summer Session), Graduate Academic Assistant, CONS 327 Course Development, Faculty of Forestry, University of British Columbia
-
-2023/2024, TA Training Program Coordinator, Teaching & Learning Support, Dean’s Office, Faculty of Forestry, University of British Columbia.
 
 # Teaching Assistantships
 
-FCOR 599, Project Proposal Development and Proof of Concept, Senior Teaching Assistant (2 Terms, Winter session, 2024/25), 6 credits, 39 students.
-
-FCOR 599, Project Proposal Development and Proof of Concept, Senior Teaching Assistant (2 Terms, Winter session, 2023/24), 3 credits, 29 students.
-
-CONS 340, Introduction to Geographic Information Systems for Forestry and Conservation. Graduate Teaching Assistant (Summer session, 2023), 3 credits, 90 students.
-
-FCOR 599, Project Proposal Development and Proof of Concept, Senior Teaching Assistant (2 Terms, Winter session, 2022/23), 3 credits, 29 students.
-
-FOPE 501, Geomatics in Forestry: Data Collection and Management, Graduate Teaching Assistant (Winter session, 2022), 3 credits, 3 students.
-
-CONS 340, Introduction to Geographic Information Systems for Forestry and Conservation. Graduate Teaching Assistant (Summer session, 2022), 3 credits, 90 students.
-
-FCOR 502, Entrepreneurship, Graduate Teaching Assistant (Winter session, 2022), 1.5 credits, 39 students.
-
-APPP 501, Project Management and Leadership, Graduate Teaching Assistant (Winter Session, 2022), 1.5 credits, 54 students.
-
-FCOR 501, Project Management, Graduate Teaching Assistant (Winter Session, 2021), 1.5 credits, 39 students.
-
-APPP 501, Project Management and Leadership, Graduate Teaching Assistant (Winter Session, 2021), 1.5 credits, 32 students.
+- List any TA positions you may have held. 
 
 # Institutional Service
 
-2024, M.G.E.M., Sept. Retreat, Alumni Guest & Support.
-
-2023, M.G.E.M., Sept. Retreat, Alumni Guest & Support.
-
-2023, M.G.E.M., Info Session, Alumni Panelist.
-
-2022, M.G.E.M., Sept. Retreat, Alumni Guest & Support.
-
-2021, M.G.E.M., Sept. Retreat, Alumni Guest & Support.
-
-2020/21, M.G.E.M., Student Representative, Forestry Graduate Student Association
+- Volunteering etc. 
